Fix Iframe size on mobile

--- a/public_html/css/layout.css
+++ b/public_html/css/layout.css
@@ -157,6 +157,11 @@ body{
 	.chat-wrapper .chat-window ul li .text{
 		clear: both;
 	}
+
+	.chat-wrapper .chat-window ul li iframe{
+		width: 100%;
+	}
+
 }
 @media only screen and (max-width: 479px) {
 
